--- a/GridImagePicker/.project
+++ b/GridImagePicker/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GridImagePicker</name>
+	<name>FuLiaoGridImagePicker</name>
 	<comment></comment>
 	<projects>
 	</projects>
